fix(*): CrossPlatform Scrolling updated  (#70)
* CrossPlatform Scrolling


* scrollbar width set


---------

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -345,7 +345,12 @@
 @media only screen and (max-width: 960px) {
   .CrossPlatform .column.last {
     max-height: 300px;
+    overflow-y: auto ;
   }
+  .CrossPlatform .column.last::-webkit-scrollbar {
+    width: 7px;
+}
+
 }
 
 @media only screen and (min-width: 481px) and (max-width: 960px) {
@@ -353,12 +358,26 @@
     width: 66.7%;
     margin: 0 auto;
   }
+  .CrossPlatform .column.last::-webkit-scrollbar {
+    width: 7px;
+}
+
 }
 
 @media only screen and (min-width: 961px) {
   .CrossPlatform {
     max-height: 800px;
   }
+
+  .CrossPlatform .column.last {
+    max-height: 800px;
+    overflow-y: auto;
+    
+  }
+
+  .CrossPlatform .column.last::-webkit-scrollbar {
+    width: 7px;
+}
 
   /* Correct for whitespace in the image of phones */
   .CrossPlatform .column.left {
@@ -367,7 +386,7 @@
 
   .CrossPlatform .prism-code {
     margin-top: -25px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
